// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidecard Component Matches the blue card snapshot with image 1`] = `
<div
  className="dashboard-spacing"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-12 pt-2"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <p />
      <section
        className="submit-container"
        id="blue-section"
      >
        <h2
          className="heading-style"
        >
          header
        </h2>
        <div
          className="submit-content"
        >
          <span>
            content
          </span>
          <a
            href="imageLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="imagelink"
              height="65px"
              src="image"
              width="310px"
            />
          </a>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Sidecard Component Matches the blue card snapshot without image 1`] = `
<div
  className="dashboard-spacing"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-12 pt-2"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <p />
      <section
        className="submit-container"
        id="blue-section"
      >
        <h2
          className="heading-style"
        >
          header
        </h2>
        <div
          className="submit-content"
        >
          <span>
            content
          </span>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Sidecard Component Matches the bluegrey card snapshot 1`] = `
<div
  className="dashboard-spacing"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-12 pt-2"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <p />
      <section
        className="bluegrey-container"
        id="bluegrey-section"
      >
        <div
          className="container-background bluegrey-heading"
        >
          <h2
            className="heading-style"
          >
            header
          </h2>
        </div>
        <div
          className="bluegrey-content"
        >
          <span
            className="content-style"
          >
            content
          </span>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Sidecard Component Matches the grey card snapshot 1`] = `
<div
  className="dashboard-spacing"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-12 pt-2"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <p />
      <section
        className="submit-container"
        id="grey-section"
        style={
          Object {
            "backgroundColor": "#F2F2F2",
            "border": "none",
            "color": "#000",
          }
        }
      >
        <h2
          style={
            Object {
              "color": "#000",
            }
          }
        >
          header
        </h2>
        <div
          className="submit-content"
        >
          <span>
            content
          </span>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Sidecard Component Matches the snapshot when heading is long 1`] = `
<div
  className="dashboard-spacing"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-12 pt-2"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <p />
      <section
        className="submit-container"
        id="grey-section"
        style={
          Object {
            "backgroundColor": "#F2F2F2",
            "border": "none",
            "color": "#000",
          }
        }
      >
        <h2
          style={
            Object {
              "color": "#000",
            }
          }
        >
          heading is quite long so we can use custom styling to see it render
        </h2>
        <div
          className="submit-content"
        >
          <span>
            content
          </span>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Sidecard Component Matches the snapshot when it is wide 1`] = `
<div
  className="wide-dashboard-spacing"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-12 pt-2"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <p />
      <section
        className="submit-container"
        id="grey-section"
        style={
          Object {
            "backgroundColor": "#F2F2F2",
            "border": "none",
            "color": "#000",
          }
        }
      >
        <h2
          style={
            Object {
              "color": "#000",
            }
          }
        >
          header
        </h2>
        <div
          className="submit-content"
        >
          <span>
            content
          </span>
        </div>
      </section>
    </div>
  </div>
</div>
`;
